--- a/LedenAdministratie/templates/registration/logged_out.html
+++ b/LedenAdministratie/templates/registration/logged_out.html
@@ -3,11 +3,13 @@
 
 {% block content %}
 
-<div class="row align-items-center">
-    <div class="col">
-        <div class="jumbotron dark">
-            <h1 class="display-10">Je bent uitgelogd!</h1>
-        </div>
+<div class="text-center">
+    <h1>Doei!</h1>
+    <div class="lead mt-1">
+        Je bent succesvol uitgelogd.
+    </div>
+    <div class="small mt-4">
+        Klik <a href="{% url 'login' %}">hier</a> om terug te gaan naar het inlogscherm.
     </div>
 </div>
 
