--- a/LedenAdministratie/templates/registration/login.html
+++ b/LedenAdministratie/templates/registration/login.html
@@ -1,36 +1,42 @@
 {% extends 'registration/base.html' %}
+
 {% load static %}
 {% load widget_tweaks %}
 
+{% block alerts %}
+{% if form.errors %}
+<div class="alert">
+    Er is een verkeerde email of wachtwoord ingevuld, probeer het nog eens.
+</div>
+{% endif %}
+{% endblock %}
+
 {% block content %}
 
-<div class="row align-items-center">
-    <div class="col col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-        <form method="post" enctype="multipart/form-data" class="dark form-signin">
-            {% if form.errors %}
-                <p>Je e-mail adres of wachtwoord zijn niet correct, probeer het nog eens.</p>
-            {% endif %}
+<h1 class="h3 mb-4 font-weight-normal text-center">Inloggen bij DJO</h1>
 
-            {% csrf_token %}
+<form method="post" enctype="multipart/form-data" class="dark form-signin">
+    {% csrf_token %}
 
-            <input type=checkbox class="toggle toggle-right" id=toggle>
-            <img class="mb-4 logo-form" src="{% static 'img/djolink_VAG-transp.png' %}" width=80%>
-            <h1 class="h3 mb-3 font-weight-normal">Inloggen bij DJO</h1>
-            <div class="form-group">
-                <label for="id_username">E-mail adres</label>
-                {% render_field form.username|attr:"autofocus" class+='semidark darkborder text form-control' placeholder="E-mail adres" %}
-            </div>
-            <div class="form-group">
-                <label for="id_password">Wachtwoord</label>
-                {% render_field form.password class+='semidark darkborder text form-control' placeholder="Wachtwoord" %}
-            </div>
-            <button class="semidark darkborder text btn btn-md btn-primary btn-block" type="submit">Inloggen</button>
-            <br>
-            <p>Wachtwoord vergeten of geen account? <a href="{% url 'password_reset' %}">Klik hier</a></p>
-
-            <input type="hidden" name="next" value="{{ next }}">
-        </form>
+    <div class="form-group">
+        <label for="id_username">E-mailadres</label>
+        {% render_field form.username|attr:"autofocus" class+='semidark darkborder text form-control' placeholder="E-mailadres" autocomplete="off" %}
     </div>
+
+    <div class="form-group mt-3">
+        <label for="id_password">Wachtwoord</label>
+        {% render_field form.password class+='semidark darkborder text form-control' placeholder="Wachtwoord" autocomplete="off" %}
+    </div>
+    
+    <div class="d-grid gap-2 mt-4">
+        <button class="btn btn-md btn-primary" type="submit">Inloggen</button>
+    </div>
+
+    <input type="hidden" name="next" value="{{ next }}">
+</form>
+
+<div class="mt-4 text-center">
+    Wachtwoord vergeten of geen account? <a href="{% url 'password_reset' %}">Klik hier</a>
 </div>
 
 {% endblock %}
