--- a/LedenAdministratie/templates/registration/password_change_form.html
+++ b/LedenAdministratie/templates/registration/password_change_form.html
@@ -2,39 +2,43 @@
 {% load static %}
 {% load widget_tweaks %}
 
+{% block alerts %}
+{% if form.errors %}
+<div class="alert">
+    {{ form.errors }}
+</div>
+{% endif %}
+{% endblock %}
+
 {% block content %}
 
-<div class="row align-items-center">
-    <div class="col col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-        <form method="post" enctype="multipart/form-data" class="dark form-signin">
-            {% if form.errors %}
-                <p>{{ form.errors }}</p>
-            {% endif %}
+<h1 class="h3 mb-4 font-weight-normal text-center">Nieuw Wachtwoord Instellen</h1>
 
-            {% csrf_token %}
+<form method="post" enctype="multipart/form-data" class="dark form-signin">
+    {% csrf_token %}
 
-            <input type=checkbox class="toggle toggle-right" id=toggle>
-            <img class="mb-4 logo-form" src="{% static 'img/djolink_VAG-transp.png' %}" width=80%>
-            <h1 class="h3 mb-3 font-weight-normal">Nieuw wachtwoord instellen</h1>
-            <div class="form-group">
-                <label for="id_old_password">Huidig password</label>
-                {% render_field form.old_password|attr:"autofocus" class+='semidark darkborder text form-control' placeholder="Huidig sassword" %}
-            </div>
-            <div class="form-group">
-                <label for="id_new_password1">Nieuw password</label>
-                {% render_field form.new_password1|attr:"autofocus" class+='semidark darkborder text form-control' placeholder="Nieuw password" %}
-            </div>
-            <div class="form-group">
-                <label for="id_new_password2">Nieuw password (Verificatie)</label>
-                {% render_field form.new_password2|attr:"autofocus" class+='semidark darkborder text form-control' placeholder="Nieuw password (Verificatie)" %}
-            </div>
-            <button class="semidark darkborder text btn btn-md btn-primary btn-block" type="submit">Wachwoord aanpassen</button>
-            <br>
-            <p>Wachtwoord vergeten of geen account? <a href="{% url 'password_reset' %}">Klik hier</a></p>
-
-            <input type="hidden" name="next" value="{{ next }}">
-        </form>
+    <div class="form-group mt-3">
+        <label for="id_old_password">Huidig Wachtwoord</label>
+        {% render_field form.old_password|attr:"autofocus" class+='semidark darkborder text form-control' placeholder="Huidig Wachtwoord" %}
     </div>
+    <div class="form-group mt-3">
+        <label for="id_new_password1">Nieuw Wachtwoord</label>
+        {% render_field form.new_password1|attr:"autofocus" class+='semidark darkborder text form-control' placeholder="Nieuw Wachtwood" %}
+    </div>
+    <div class="form-group mt-3">
+        <label for="id_new_password2">Nieuw Wachtwoord (Verificatie)</label>
+        {% render_field form.new_password2|attr:"autofocus" class+='semidark darkborder text form-control' placeholder="Herhaal het Wachtwoord" %}
+    </div>
+    
+    <div class="d-grid gap-2 mt-4">
+        <button class="btn btn-md btn-primary" type="submit">Wachtwoord Aanpassen</button>
+    </div>
+
+    <input type="hidden" name="next" value="{{ next }}">
+</form>
+
+<div class="mt-4 text-center">
+    Wachtwoord vergeten of geen account? <a href="{% url 'password_reset' %}">Klik hier</a>
 </div>
 
 {% endblock %}
