--- a/LedenAdministratie/templates/registration/password_reset_done.html
+++ b/LedenAdministratie/templates/registration/password_reset_done.html
@@ -3,14 +3,13 @@
 
 {% block content %}
 
-<div class="row align-items-center">
-    <div class="col">
-        <div class="jumbotron dark">
-            <h1 class="display-5">Wachtwoord reset e-mail verstuurd</h1>
-            <p class="lead">We hebben je instructies gestuurd voor het instellen van je wachtwoord, als er een account bestaat met het door jou ingevoerde e-mailadres.
-            <p>Als je geen e-mail ontvangt, controleer dan of je het e-mailadres hebt ingevoerd wat bij DJO bekend is en controleer je spam-map.</p>
-
-        </div>
+<div class="text-center">
+    <h1>E-mail Verstuurd!</h1>
+    <div class="lead mt-3">
+        We hebben je instructies gestuurd voor het instellen van je wachtwoord <i>mits deze bij ons bekend is</i>.
+    </div>
+    <div class="small mt-4">
+        Geen mail ontvangen? Check je spam! Het kan ook zijn dat je deze onjuist hebt ingevuld.
     </div>
 </div>
 
