--- a/LedenAdministratie/templates/registration/base.html
+++ b/LedenAdministratie/templates/registration/base.html
@@ -8,29 +8,40 @@
 
     <title>DJO Login</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
-
-    <!-- Custom styles for this template -->
+    <!-- stylesheets -->
+    <link href="{% static 'css/lib/bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
     <link href="{% static 'css/registration.css' %}" rel="stylesheet" crossorigin="anonymous">
+
+    <!-- scripts -->
+    <script src="{% static 'js/lib/jquery.slim.min.js' %}"></script>
+    <script src="{% static 'js/lib/popper.min.js' %}"></script>
+    <script src="{% static 'js/lib/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/theme.js' %}"></script>
+    {% block customscript %}{% endblock %}
 </head>
 
-<body class="text-center dark text">
-<div class=background></div>
+<body>
+    <nav class="navbar fixed-top">
+        <div class="container-fluid">
+            <a class="nav-brand" href="{% url 'login' %}">
+                <img height="48px" src="{% static 'img/logo-base.png' %}">
+            </a>
+            <button class="btn theme-toggle"></button>
+        </div>
+    </nav>
 
-<a class=logo-link href=https://djoamersfoort.nl><img class="logo-upper-left" src="{% static 'img/logo-base.png' %}"></a>
+    <div class="content">
+        {% block alerts %}
+        {% endblock %}
 
-<div class="container">
-{% block content %}
-{% endblock %}
+        <div class="card content-card">
+            <div class="card-body">
+                {% block content %}
+                {% endblock %}
+            </div>
+        </div>
+    </div>
 </div>
-
-<script src="{% static 'js/registration.js' %}"></script>
-<script src="{% static 'js/jquery.slim.min.js' %}"></script>
-<script src="{% static 'js/popper.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-{% block customscript %}
-{% endblock %}
 
 </body>
 </html>
