--- a/LedenAdministratie/templates/registration/password_reset_complete.html
+++ b/LedenAdministratie/templates/registration/password_reset_complete.html
@@ -1,14 +1,15 @@
 {% extends 'registration/base.html' %}
 {% load static %}
-{% load widget_tweaks %}
 
 {% block content %}
 
-<div class="row align-items-center">
-    <div class="col">
-        <div class="jumbotron dark">
-            <p class="legend">Je wachtwoord is aangepast, je kunt nu met dit nieuwe wachtwoord inloggen op alle DJO applicaties</p>
-        </div>
+<div class="text-center">
+    <h1>Succes!</h1>
+    <div class="lead mt-1">
+        Je wachtwoord is aangepast.
+    </div>
+    <div class="small mt-4">
+        Klik <a href="{% url 'login' %}">hier</a> om terug te gaan naar het inlogscherm.
     </div>
 </div>
 
