--- a/LedenAdministratie/templates/registration/password_reset_form.html
+++ b/LedenAdministratie/templates/registration/password_reset_form.html
@@ -2,28 +2,31 @@
 {% load static %}
 {% load widget_tweaks %}
 
+{% block alerts %}
+{% if form.email.errors %}
+<div class="alert">
+    {{ form.email.errors }}
+</div>
+{% endif %}
+{% endblock %}
+
 {% block content %}
 
-<div class="row align-items-center">
-    <div class="col col-12 offset-md-2 col-md-8 offset-lg-3 col-lg-6">
-        <p>Vul hier je e-mail adres dat bij DJO bekend is in, en we sturen je een e-mail met daarin instructies om je password te herstellen.</p>
-        <form method="post" enctype="multipart/form-data" class="dark form-signin">
-            {% csrf_token %}
-
-            <p>{{ form.email.errors }}</p>
-
-            <input type=checkbox class="toggle toggle-right" id=toggle>
-            <img class="mb-4 logo-form" src="{% static 'img/djolink_VAG-transp.png' %}" width=80%>
-            <h1 class="h3 mb-3 font-weight-normal">Password reset</h1>
-            <div class="form-group">
-                <label for="id_email">E-mail adres</label>
-                {% render_field form.email|attr:"autofocus" class+='semidark darkborder text form-control' placeholder="E-mail adres" %}
-            </div>
-            <button class="semidark darkborder text btn btn-lg btn-primary btn-block" type="submit">Herstellen</button>
-            <br>
-        </form>
-    </div>
+<h1 class="h3 font-weight-normal text-center">Password Reset</h1>
+<div class="mt-3 mb-3 text-center">
+    Vul je bij DJO bekende e-mailadres in om instructies voor herstel te ontvangen.
 </div>
 
+<form method="post" enctype="multipart/form-data" class="dark form-signin">
+    {% csrf_token %}
+
+    <div class="form-group">
+        {% render_field form.email|attr:"autofocus" class+='semidark darkborder text form-control' placeholder="E-mailadres" autocomplete="off" %}
+    </div>
+
+    <div class="d-grid gap-2 mt-4">
+        <button class="btn btn-md btn-primary" type="submit">Herstellen</button>
+    </div>
+</form>
 
 {% endblock %}
