renamed folder to not be included in gitignore

--- a/LedenAdministratie/templates/registration/base.html
+++ b/LedenAdministratie/templates/registration/base.html
@@ -9,13 +9,13 @@
     <title>DJO Login</title>
 
     <!-- stylesheets -->
-    <link href="{% static 'css/lib/bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
+    <link href="{% static 'css/src/bootstrap.min.css' %}" rel="stylesheet" crossorigin="anonymous">
     <link href="{% static 'css/registration.css' %}" rel="stylesheet" crossorigin="anonymous">
 
     <!-- scripts -->
-    <script src="{% static 'js/lib/jquery.slim.min.js' %}"></script>
-    <script src="{% static 'js/lib/popper.min.js' %}"></script>
-    <script src="{% static 'js/lib/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/src/jquery.slim.min.js' %}"></script>
+    <script src="{% static 'js/src/popper.min.js' %}"></script>
+    <script src="{% static 'js/src/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/theme.js' %}"></script>
     {% block customscript %}{% endblock %}
 </head>
