--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -17,7 +17,7 @@
     <!-- scripts -->
     <script src="{% static 'js/src/jquery.slim.min.js' %}"></script>
     <script src="{% static 'js/src/popper.min.js' %}"></script>
-    <script src="{% static 'js/src/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/src/bootstrap4.min.js' %}"></script>
     <script src="{% static 'js/src/feather.min.js' %}"></script>
 </head>
 
