chore: cleanup oauth token code, fix some edge cases

--- a/LedenAdministratie/templates/registration/login.html
+++ b/LedenAdministratie/templates/registration/login.html
@@ -6,7 +6,7 @@
 {% block alerts %}
 {% if form.errors %}
 <div class="alert">
-    Er is een verkeerde email of wachtwoord ingevuld, probeer het nog eens.
+    Er is een verkeerd e-mail adres of wachtwoord ingevuld, probeer het nog eens.
 </div>
 {% endif %}
 {% endblock %}
