chore: update welcome e-mail text

--- a/LedenAdministratie/templates/emails/welcome_email.html
+++ b/LedenAdministratie/templates/emails/welcome_email.html
@@ -2,7 +2,11 @@
 
 Beste {{ member.first_name }},<br>
 <br>
-Welkom bij DJO Amersfoort! Bijgesloten vind je een PDF met daarin alles wat je nodig hebt om snel van start te kunnen gaan. Veel plezier!<br>
+Welkom bij DJO Amersfoort! Bijgesloten vind je een PDF met daarin alles wat je nodig hebt om snel van start te kunnen gaan.<br>
+<b>Belangrijk om te weten</b>: als je naar DJO wil komen, moet je je aanmelden via de <a href="https://aanmelden.djoamersfoort.nl">aanmeld app</a>.<br>
+In de bijgesloten PDF staat hoe je hiervoor eenvoudig een account kunt aanmaken.<br>
+<br>
+Veel plezier, en hopelijk tot snel!<br>
 <br>
 Met vriendelijke groeten,<br>
 <a href="https://www.djoamersfoort.nl">DJO Amersfoort</a><br>
