--- a/static/css/registration.css
+++ b/static/css/registration.css
@@ -77,7 +77,7 @@ body {
 
 body.light {
     background-position: 100% 0;
-   color: var(--text-light);
+    color: var(--text-light);
 }
 
 body.light .nav-brand {
@@ -88,17 +88,19 @@ body.light .content-card {
     background: var(--dialog-light);
 }
 
-#loading {
-  display: block;
-  position: absolute;
-  visibility: hidden;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.2);
-  background-image: url("/static/img/loading.gif");
-  background-repeat: no-repeat;
-  background-position: center;
+.loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1050;
+
+    color: var(--text-dark);
+    background: rgba(0, 0, 0, 0.75);
 }
