--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -18,6 +18,7 @@
     <script src="{% static 'js/src/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/theme.js' %}"></script>
     {% block customscript %}{% endblock %}
+    {% block head %}{% endblock %}
 </head>
 
 <body>
@@ -30,8 +31,8 @@
         </div>
     </nav>
 
+    {% block alerts %}
     <div class="content">
-        {% block alerts %}
         {% endblock %}
 
         <div class="card content-card">
