--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,9 +1,15 @@
-<div id="loading"></div>
-
 {% extends 'registration/base.html' %}
 
 {% load static %}
 {% load widget_tweaks %}
+
+{% block head %}
+<div class="loader">
+    <div class="spinner-border" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>
+</div>
+{% endblock %}
 
 {% block alerts %}
 {% if form.errors %}
