feat: use django-mailer to move email processing to a background process

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,8 @@
     <script src="{% static 'js/src/popper.min.js' %}"></script>
     <script src="{% static 'js/src/bootstrap4.min.js' %}"></script>
     <script src="{% static 'js/src/feather.min.js' %}"></script>
+    {% block header %}
+    {% endblock %}
 </head>
 
 <body>
