chore: update name in invoice emails chore: upgrade jquery

--- a/templates/emails/send_invoice_reminder.html
+++ b/templates/emails/send_invoice_reminder.html
@@ -12,7 +12,7 @@ Graag zien wij de betaling van deze factuur alsnog tegemoet.<br>
 <br>
 Met vriendelijke groet,<br>
 <br>
-Jeroen Stroeve<br>
+Alexander Molenaar<br>
 Penningmeester<br>
 Stichting De Jonge Onderzoekers Amersfoort<br>
 
