--- a/templates/emails/send_invoice_email.html
+++ b/templates/emails/send_invoice_email.html
@@ -6,12 +6,12 @@ Beste ouders/verzorgers van {{ invoice.member.full_name }},<br>
 Beste {{ invoice.member.full_name }},<br>
 {% endif %}
 <br>
-Hierbij sturen wij de factuur voor de contributie van {{ invoice.created.year }}.<br>
+Hierbij sturen wij u de factuur voor de contributie van {{ invoice.created.year }}.<br>
 <br>
 <br>
 Met vriendelijke groet,<br>
 <br>
-Jeroen Stroeve<br>
+Alexander Molenaar<br>
 Penningmeester<br>
 Stichting De Jonge Onderzoekers Amersfoort<br>
 
