feat: add 'revbank_account' field to member

--- a/templates/edit_member.html
+++ b/templates/edit_member.html
@@ -46,11 +46,14 @@
                         <label for="id_geslacht">Geslacht *</label>
                         {{ form.geslacht|add_class:'form-control' }}
 
-                        <label for="id_types">Type</label>
-                        {{ form.types|add_class:'form-control' }}
-
                         <label for="id_days">Aantal dagdelen aanwezig</label>
                         {{ form.days|add_class:'form-control' }}
+
+                        <label for="id_revbank_account">Revbank account</label>
+                        {{ form.revbank_account|add_class:'form-control' }}
+
+                        <label for="id_types">Rollen</label>
+                        {{ form.types|add_class:'form-control' }}
                     </div>
                 </div>
             </div>
