chore: update invoice text + phone number

--- a/templates/invoice/invoice.css
+++ b/templates/invoice/invoice.css
@@ -7,7 +7,7 @@
     content: 'DJO Amersfoort'; }
   @bottom-right {
     color: #a9a;
-    content: 'info@djoamersfoort.nl | Tel. 06-166 28 350 | www.djoamersfoort.nl';
+    content: 'info@djoamersfoort.nl | Tel. 06-53 54 07 58 | www.djoamersfoort.nl';
     font-family: DejaVu Sans;
     font-size: 9pt; } }
 
