--- a/templates/invoice/invoice.html
+++ b/templates/invoice/invoice.html
@@ -44,7 +44,7 @@
           <td>{{ line.description }}</td>
           <td id="amount">{{ line.amount|floatformat:2 }}</td>
           <td>{{ line.count }}</td>
-          <td>{{ line.line_total|floatformat:2 }}</td>
+          <td>€ {{ line.line_total|floatformat:2 }}</td>
         </tr>
         {% endfor %}
       </tbody>
@@ -60,7 +60,7 @@
         <tr>
           <td>{{ due_date }}</td>
           <td>NL45 INGB 0004 4338 56</td>
-          <td>{{ grand_total|floatformat:2 }}</td>
+          <td>€ {{ grand_total|floatformat:2 }}</td>
         </tr>
       </tbody>
     </table>
