--- a/templates/profile.html
+++ b/templates/profile.html
@@ -90,11 +90,14 @@
                         <label for="id_geslacht">Geslacht *</label>
                         {{ form.geslacht|add_class:'form-control' }}
 
-                        <label for="id_types">Type</label>
-                        {{ form.types|add_class:'form-control' }}
-
                         <label for="id_days">Aantal dagdelen aanwezig</label>
                         {{ form.days|add_class:'form-control' }}
+
+                        <label for="id_revbank_account">Revbank account</label>
+                        {{ form.revbank_account|add_class:'form-control' }}
+
+                        <label for="id_types">Rollen</label>
+                        {{ form.types|add_class:'form-control' }}
                     </div>
                 </div>
             </div>
@@ -131,6 +134,24 @@
             </div>
         </div>
     </div>
+
+    <div class="col-lg-10 col-md-12">
+        <div class="card">
+            <div class="card-body">
+                <div class="card-header text-white bg-secondary">Strippenkaart</div>
+
+                <br/>
+                <div class="form-row">
+                    <div class="col-6">
+                        {% include 'stripcards_table.html' %}
+                    </div>
+                    <div class="col-6">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </form>
 
 
