--- a/templates/profile.html
+++ b/templates/profile.html
@@ -19,6 +19,11 @@
                 <span data-feather="settings"></span>OAuth2 applicaties
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'two_factor:profile' %}">
+                <span data-feather="lock"></span>2FA instellen
+            </a>
+        </li>
     </ul>
 
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
