--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,11 +14,13 @@
                 <span data-feather="lock"></span>Password wijzigen
             </a>
         </li>
+        {% if user.is_verified %}
         <li class="nav-item">
             <a class="nav-link" href="{% url 'oauth2_provider:list' %}">
                 <span data-feather="settings"></span>OAuth2 applicaties
             </a>
         </li>
+        {% endif %}
         <li class="nav-item">
             <a class="nav-link" href="{% url 'two_factor:profile' %}">
                 <span data-feather="lock"></span>2FA instellen
