--- a/templates/registration/base.html
+++ b/templates/registration/base.html
@@ -19,6 +19,7 @@
     <script src="{% static 'js/theme.js' %}"></script>
     {% block customscript %}{% endblock %}
     {% block head %}{% endblock %}
+    {% block extra_media %}{% endblock %}
 </head>
 
 <body>
