Feat: Add support for notifications

--- a/templates/email_send.html
+++ b/templates/email_send.html
@@ -34,6 +34,9 @@
 
                         <label for="id_subject">Onderwerp</label>
                         {{ form.subject|add_class:'form-control' }}
+                        
+                        <label for="id_description">Beschrijving</label>
+                        {{ form.description|add_class:'form-control' }}
                     </div>
 
                     <div class="form-row col-10">
