feat: add invoice search function

--- a/templates/base.html
+++ b/templates/base.html
@@ -97,6 +97,11 @@
                             <span data-feather="dollar-sign"></span>Betaling verwerken
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'invoice_search' %}">
+                            <span data-feather="search"></span>Zoeken
+                        </a>
+                    </li>
                 </ul>
                 {% endblock %}
 
